--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: hocount
+application: hoecount
 version: 1
 runtime: python27
 api_version: 1
@@ -16,4 +16,6 @@ handlers:
 
 libraries:
 - name: jinja2
+  version: latest
+- name: django
   version: latest
